--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workout Tracker</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body>
     <header>
@@ -82,6 +81,6 @@
       </section>
     </main>
 
-    <script src="./app.js"></script>
+<script type="module" src="./app.js"></script>
   </body>
 </html>
