--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
 
           <div id="templatesList" class="stack"></div>
-          <p class="muted">Each template must have exactly <b>5 exercises</b>.</p>
+          <p class="muted">Add as many exercises as you want.</b>.</p>
         </div>
 
         <!-- Workout -->
