--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workout Tracker</title>
+    <title>Richard and Kevin's Workout Tracker (for our healthy life)</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <header>
-      <h1>Workout Tracker</h1>
+      <h1>Richard and Kevin's Workout Tracker (for our healthy life)</h1>
       <div id="userBar" class="row"></div>
     </header>
 
