--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- APP -->
       <section id="appSection" class="card hidden">
         <div class="tabs">
-          <button class="tab active" data-tab="templates">Templates</button>
+          <button class="tab active" data-tab="templates">Programs</button>
           <button class="tab" data-tab="workout">Workout</button>
           <button class="tab" data-tab="library">Library</button>
           <button class="tab" data-tab="history">History</button>
