--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
         <!-- Templates -->
         <div class="panel" id="tab-templates">
-          <h2>Templates (Push / Pull)</h2>
+          <h2>Programs</h2>
 
 <div class="row">
-  <input id="tplName" placeholder="Template name (e.g., Push A)" />
+<input id="tplName" placeholder="Program name (e.g., Push A)" />
   <button id="createTplBtn">Create</button>
 </div>
 
