--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   </head>
 
   <body>
-    <header>
-      <h1>Richard and Kevin's Workout Tracker (for our healthy life)</h1>
-      <div id="userBar" class="row"></div>
-    </header>
+<header class="topbar">
+  <div class="title-block">
+    <h1>Richard and Kevin's Workout Tracker</h1>
+    <div class="subtitle">for our healthy life</div>
+  </div>
+
+  <div id="userBar"></div>
+</header>
+
 
     <main>
       <!-- AUTH -->
