--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Richard and Kevin's Workout Tracker (for our healthy life)</title>
+    <title>Richard and Kevin's Workout Tracker</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
