--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <section id="appSection" class="card hidden">
         <div class="tabs">
           <!-- ORDER + LABELS UPDATED -->
-          <button class="tab active" data-tab="workout">Start a Workout</button>
-          <button class="tab" data-tab="templates">Create a Workout</button>
-          <button class="tab" data-tab="library">Exercise Library</button>
-          <button class="tab" data-tab="history">Workout History</button>
-          <button class="tab" data-tab="progress">Exercise Progress</button>
+          <button class="tab active" data-tab="workout">Start</button>
+          <button class="tab" data-tab="templates">Create</button>
+          <button class="tab" data-tab="library">Library</button>
+          <button class="tab" data-tab="history">History</button>
+          <button class="tab" data-tab="progress">Progress</button>
         </div>
 
         <!-- Workout (DEFAULT VISIBLE) -->
