--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section id="appSection" class="card hidden">
         <div class="tabs">
           <!-- ORDER + LABELS UPDATED -->
-          <button class="tab active" data-tab="workout">Start</button>
+          <button class="tab active" data-tab="workout">Let's Go Bro!</button>
           <button class="tab" data-tab="templates">Create</button>
           <button class="tab" data-tab="library">Library</button>
           <button class="tab" data-tab="history">History</button>
