--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
 
   <body>
     <header class="topbar">
-      <div class="title-block">
-        <h1>Richard and Kevin's Workout Tracker</h1>
-        <div class="subtitle">for our healthy life</div>
-      </div>
+  <div class="title-block">
+    <h1>Richard and Kevin's Workout Tracker</h1>
+    <div class="subtitle">for our healthy life</div>
+  </div>
 
-      <!-- Hamburger menu (top-right) -->
-      <div class="menu" id="userMenu">
-        <button
-          class="menu-btn"
-          id="menuBtn"
-          type="button"
-          aria-label="Open menu"
-          aria-expanded="false"
-        >
-          ☰
-        </button>
+  <div class="menu" id="userMenu">
+    <button
+      class="menu-btn secondary"
+      id="menuBtn"
+      type="button"
+      aria-label="Open menu"
+      aria-expanded="false"
+    >
+      ☰
+    </button>
 
-        <div class="menu-panel" id="menuPanel">
-          <!-- app.js will still render “Signed in as…” + “Sign out” into this -->
-          <div id="userBar"></div>
-        </div>
-      </div>
-    </header>
+    <div class="menu-panel" id="menuPanel">
+      <div id="userBar"></div>
+    </div>
+  </div>
+</header>
 
     <main>
       <!-- AUTH -->
