--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="menu-divider"></div>
 
           <!-- Signed in as / Sign out will render here -->
-          <div id="userBar"></div>
+          <div id="userBar" class="menu-user"></div>
         </div>
       </div>
     </header>
@@ -50,7 +50,6 @@
 
       <!-- APP -->
       <section id="appSection" class="card hidden">
-
         <!-- KEEP these tabs (hidden) so your existing app.js tab logic still works -->
         <div class="tabs tabs-hidden">
           <button class="tab" data-tab="workout">Workout</button>
