--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="hamburgerBtn" class="icon-btn" aria-label="Menu">☰</button>
 
         <div id="hamburgerMenu" class="menu hidden">
-          <button class="menu-item" data-tab="workout">Let’s go bro! (Start a workout)</button>
+          <button class="menu-item" data-tab="workout">Start a workout</button>
           <button class="menu-item" data-tab="templates">Create</button>
           <button class="menu-item" data-tab="library">Library</button>
           <button class="menu-item" data-tab="history">History</button>
