--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Richard and Kevin's Workout Tracker</title>
+    <title>Rivin's Workout Tracker</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <header class="topbar">
       <div class="title-block">
-        <h1>Richard and Kevin's Workout Tracker</h1>
+        <h1>Rivin's Workout Tracker</h1>
         <div class="subtitle">for our healthy life</div>
       </div>
 
