--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
       </section>
     </main>
 
-    <script type="module" src="./app.js"></script>
+<script type="module" src="./app.js?v=3"></script>
   </body>
 </html>
