--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rivin's Workout Tracker</title>
+    <title>Workout Tracker</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <header class="topbar">
       <div class="title-block">
-        <h1>Rivin's Workout Tracker</h1>
-        <div class="subtitle">for our healthy life</div>
+        <h1>Workout Tracker</h1>
+        <div class="subtitle">for your healthy life</div>
+        <div class="subtitle">and your healthy butthole</div>
       </div>
 
       <!-- Hamburger -->
